Refactored Server History Management

--- a/ssb-tool/ssb-tool.csproj
+++ b/ssb-tool/ssb-tool.csproj
@@ -69,6 +69,7 @@
     <Compile Include="App.Designer.cs">
       <DependentUpon>App.cs</DependentUpon>
     </Compile>
+    <Compile Include="ServerBrowserHistory.cs" />
     <Compile Include="Vdf.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
