Refactored Steam user account related code into AccountDiscovery class.

--- a/ssb-tool/ssb-tool.csproj
+++ b/ssb-tool/ssb-tool.csproj
@@ -63,6 +63,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountDiscovery.cs" />
     <Compile Include="App.cs">
       <SubType>Form</SubType>
     </Compile>
